--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+html {
+  font-family: "Kanit", sans-serif;
+}
+.container {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Pour que l'image prenne toute la hauteur de la fenêtre */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.imageWrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.overlayText {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  color: #e2ff4d; /* Couleur du texte */
+  z-index: 2; /* Pour être au-dessus de l'image */
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.overlayText h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+.overlayText h2 {
+  font-size: 2rem;
+  font-weight: normal;
+  margin: 0;
 }
